--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon">
+    <link rel="manifest" href="manifest.json">
     <title>SoftList</title>
 </head>
 <body>
