--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json">
-    <title>SoftList</title>
+   <title>SoftList</title>
 </head>
 <body>
     <header class="bg-success text-white p-3">
@@ -28,6 +28,7 @@
             <div class="text-center add">
                 <a href="addproductos.html" type="button" id="addProducto" class="btn btn-primary m-2"><i class="bi bi-bag-plus-fill"></i> Agregar Producto</a>
                 <a href="createproducto.html" type="button" class="btn btn-primary ms-2" id="add"><i class="bi bi-plus-circle-fill"></i> Crear Producto</a>
+                <a href="createcat.html" type="button" class="btn btn-primary ms-2" id="add"><i class="bi bi-plus-circle-fill"></i> Crear Categoria</a>
             </div> 
         </div>
     </main>
