--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </ul>
             <div class="text-center add">
                 <a href="addproductos.html" type="button" id="addProducto" class="btn btn-primary m-2"><i class="bi bi-bag-plus-fill"></i> Agregar Producto</a>
-                <a href="createproducto.html" type="button" class="btn btn-primary ms-2" id="add"><i class="bi bi-plus-circle-fill"></i> Crear Producto</a>
-                <a href="createcat.html" type="button" class="btn btn-primary ms-2" id="add"><i class="bi bi-plus-circle-fill"></i> Crear Categoria</a>
+                <a href="createproducto.html" type="button" class="btn btn-primary m-2" id="add"><i class="bi bi-plus-circle-fill"></i> Crear Producto</a>
+                <a href="createcat.html" type="button" class="btn btn-primary m-2" id="addCat"><i class="bi bi-plus-circle-fill"></i> Crear Categoria</a>
             </div> 
         </div>
     </main>
